<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/margin_medium_2"
    android:layout_marginTop="@dimen/margin_medium_2"
    android:layout_marginRight="@dimen/margin_medium_2"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_follow_up_image"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:background="@drawable/bg_curve_corners"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/image3"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:lineSpacingExtra="@dimen/margin_medium"
        android:textSize="@dimen/text_regular_2x" android:textColor="@color/primary_text"
        android:layout_toRightOf="@+id/iv_follow_up_image"
        android:text="@string/title_name"/>

    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_alignStart="@+id/tv_title"
        android:layout_below="@+id/tv_title"/>

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_alignStart="@+id/tv_date_time"
        android:layout_below="@+id/tv_date_time"
        android:text="@string/place"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:layout_below="@+id/tv_date_time"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_alignParentRight="true"/>

</RelativeLayout>