<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/icons">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="@dimen/height_app_bar"
        android:background="@color/icons">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <RelativeLayout
                    android:id="@+id/rl_title_popular"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bg_rl_layout"
                    android:background="@drawable/bg_app_bar">

                    <ImageView
                        android:id="@+id/iv_noti"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_notifications_none_white_24dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/margin_medium_2"
                        android:layout_marginTop="@dimen/margin_medium_2"/>

                    <ImageView
                        android:id="@+id/iv_country_logo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_blur_circular_white_24dp"
                        android:layout_marginLeft="@dimen/margin_medium_3"
                        android:layout_marginTop="50dp"/>

                    <TextView
                        android:id="@+id/tv_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label"
                        android:layout_toRightOf="@id/iv_country_logo"
                        android:layout_marginTop="@dimen/margin_xxlarge"
                        android:textSize="@dimen/text_regular_2x"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginLeft="@dimen/margin_medium_2"
                        android:textColor="@color/icons"/>

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_name"
                        android:textColor="@color/icons"
                        android:layout_below="@+id/tv_label"
                        android:layout_toRightOf="@id/iv_country_logo"
                        android:textSize="@dimen/text_heading_2x"
                        android:layout_alignStart="@id/tv_label"
                        android:layout_marginTop="@dimen/margin_medium_2"/>
                    <View
                        android:layout_width="110dp"
                        android:layout_height="2dp"
                        android:layout_below="@+id/tv_country"
                        android:layout_alignStart="@+id/tv_country"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/tv_popular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_in_yangon"
                        android:textSize="@dimen/text_heading_1x"
                        android:textColor="@color/icons"
                        android:layout_below="@+id/tv_country"
                        android:layout_marginLeft="@dimen/margin_medium_2"
                        android:layout_marginTop="@dimen/margin_xlarge"/>

                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_advertise_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_title_popular"
                    android:layout_marginRight="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:scaleType="fitXY"
                    android:layout_marginTop="220dp"
                    android:src="@drawable/images2"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <RelativeLayout
                android:id="@+id/rl_festival_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginLeft="@dimen/margin_medium_2">

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:textColor="@color/primary_dark"
                    android:layout_height="wrap_content"
                    android:text="@string/festival_month"/>

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/festival_day"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_below="@+id/tv_month"/>


                <TextView
                    android:id="@+id/tv_title_festival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_month"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:textColor="@color/primary_text"
                    android:text="@string/title_festival"/>

                <TextView
                    android:id="@+id/tv_play_station"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_day"
                    android:layout_below="@+id/tv_title_festival"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:lineSpacingExtra="@dimen/margin_medium"
                    android:text="@string/play_station"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_follow_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_below="@+id/rl_festival_title">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_see_more"
                android:layout_below="@+id/rv_follow_up"
                android:layout_marginTop="@dimen/margin_large"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_see_more"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_xlarge"
                android:background="@android:color/darker_gray"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/searchFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginRight="@dimen/margin_xxlarge"
        android:src="@drawable/ic_share_white_24dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/margin_medium_3"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@id/appbar"
        android:layout_marginLeft="180dp"
        app:layout_anchorGravity="left|bottom" />

</android.support.design.widget.CoordinatorLayout>