<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons"
        android:fitsSystemWindows="true">

    <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_popular_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_popular_place"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_title_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_popular_place"
                android:src="@drawable/image"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:scaleType="fitXY"/>

        </RelativeLayout>

    </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_festival_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/iv_advertise_img"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginLeft="@dimen/margin_medium_2">

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:textColor="@color/primary_dark"
                    android:layout_height="wrap_content"
                    android:text="@string/festival_month"/>

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/festival_day"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_below="@+id/tv_month"/>


                <TextView
                    android:id="@+id/tv_title_festival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_month"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/primary_text"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:text="@string/title_festival"/>

                <TextView
                    android:id="@+id/tv_play_station"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_day"
                    android:layout_below="@+id/tv_title_festival"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:lineSpacingExtra="@dimen/margin_medium"
                    android:text="@string/play_station"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_follow_up_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_below="@+id/rl_festival_title">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="right|bottom" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_white_24dp"
        android:layout_marginLeft="180dp"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="left|bottom" />

</android.support.design.widget.CoordinatorLayout>